--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,36 +32,36 @@ features = ["shipper"]
 version = "0.1.0"
 
 [dependencies]
-async-trait = "0.1.80"
+async-trait = "0.1.83"
 base64 = "0.22.1"
 clap = { version = "3.2.25", features = ["derive", "env"] }
 console-subscriber = { version = "0.3.0", optional = true }
-flate2 = "1.0.30"
-futures = "0.3.30"
+flate2 = "1.0.35"
+futures = "0.3.31"
 http = "0.2.12"
-hyper = { version = "0.14.29", features = ["server", "http1"] }
+hyper = { version = "0.14.31", features = ["server", "http1"] }
 hyper-rustls = "0.23.2"
-lazy_static = "1.4.0"
+lazy_static = "1.5.0"
 libunftp = "0.20.1"
 prometheus = { version = "0.13.4", features = ["process"] }
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.8.0"
 slog-term = "2.9.1"
-strum = { version = "0.26.2", features = ["derive"] }
-strum_macros = "0.26.2"
-thiserror = "1.0.61"
-tokio = { version = "1.38.0", features = ["signal", "rt-multi-thread"] }
+strum = { version = "0.26.3", features = ["derive"] }
+strum_macros = "0.26.4"
+thiserror = "1.0.69"
+tokio = { version = "1.42.0", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.2.5"
 unftp-sbe-gcs = { version = "0.2.6", optional = true }
 unftp-sbe-opendal = { version = "0.0.1", optional = true }
-opendal = { version = "0.47.1", optional = true }
+opendal = { version = "0.47.3", optional = true }
 unftp-auth-rest = { version = "0.2.6", optional = true }
 unftp-auth-jsonfile = { version = "0.3.4", optional = true }
 unftp-sbe-rooter = "0.2.1"
 unftp-sbe-restrict = "0.1.2"
-url = "2.5.2"
+url = "2.5.4"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.5", optional = true }
@@ -87,10 +87,10 @@ musl = ["rest_auth", "cloud_storage", "jsonfile_auth", "azblob"]
 docker = ["musl"]
 
 [dev-dependencies]
-pretty_assertions = "1.4.0"
+pretty_assertions = "1.4.1"
 
 [build-dependencies]
-built = { version = "0.5.2", features = ["git2", "chrono"] }
+built = { version = "0.7.5", features = ["cargo-lock", "git2", "chrono", "semver"] }
 
 [profile.release]
 debug = false
