--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ documentation = "https://github.com/bolcom/unFTP"
 path = "crates/redislog"
 version = "0.1.2"
 
-[dependencies.googlelog]
+[dependencies.slog-google]
 path = "crates/googlelog"
 features = ["shipper"]
 version = "0.1.0"
