--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ readme = "README.md"
 keywords = ["ftp", "ftps", "server", "gcs"]
 categories = ["network-programming"]
 documentation = "https://github.com/bolcom/unFTP"
-resolver = "2"
 
 [workspace]
 
@@ -33,40 +32,44 @@ features = ["shipper"]
 version = "0.1.0"
 
 [dependencies]
-async-trait = "0.1.83"
+async-trait = "0.1.88"
 base64 = "0.22.1"
 clap = { version = "3.2.25", features = ["derive", "env"] }
-console-subscriber = { version = "0.3.0", optional = true }
+console-subscriber = { version = "0.4.1", optional = true }
 flate2 = "1.0.35"
-http = "0.2.12"
+
+futures = "0.3.31"
+http = "1.2.0"
 hyper = { version = "1.6.0", features = ["server", "http1"] }
-hyper-rustls = "0.23.2"
+http-body-util = "0.1.2"
+hyper-util = { version = "0.1.10", features = ["tokio"] }
+hyper-rustls = "0.27.5"
 lazy_static = "1.5.0"
 libunftp = "0.21.0"
-opendal = { version = "0.47.3", optional = true }
+opendal = { version = "0.53.2", optional = true }
 prometheus = { version = "0.13.4", features = ["process"] }
-serde = { version = "1.0.216", features = ["derive"] }
-serde_json = "1.0.133"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.137"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.8.0"
 slog-term = "2.9.1"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 thiserror = "1.0.69"
-tokio = { version = "1.42.0", features = ["signal", "rt-multi-thread"] }
+tokio = { version = "1.43.0", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.3.0"
 unftp-sbe-rooter = "0.2.2"
 unftp-sbe-restrict = "0.1.3"
 unftp-sbe-gcs = { version = "0.2.8", optional = true }
-unftp-sbe-opendal = { version = "0.1.0", optional = true }
+unftp-sbe-opendal = { version = "0.2.0", optional = true }
 unftp-sbe-iso = { version = "0.1.1", optional = true }
 unftp-auth-rest = { version = "0.2.8", optional = true }
 unftp-auth-jsonfile = { version = "0.3.6", optional = true }
-
 url = "2.5.4"
+rustls = "0.23.21"
 
 [target.'cfg(unix)'.dependencies]
-unftp-auth-pam = { version = "0.2.5", optional = true }
+unftp-auth-pam = { version = "0.2.7", optional = true }
 
 [features]
 default = ["auth_rest", "sbe_gcs", "auth_jsonfile", "sbe_opendal"]
