Add ISO storage type
This enables unFTP to use ISO files for read-only storage by using
the `unftp-sbe-iso` crate. It puts all the functionality behind
a feature flag called `sbe_iso`.

In this commit, it is not made part of the default build but perhaps
its not a bad idea to do that.

I've noticed that the other features like `cloud_storage` isn't properly
gated behind its features but I didn't want to make this commit too big
so leaving it to be fixed afterwards.

We may also want to stardardise our feature naming a bit e.g. features
that enable storage backends may start with `sbe_` e.g. `sbe_gcs`.
Similarly, auth back-ends may be named `auth_xxx` e.g. `auth_pam`. This
should make things a bit more intuitive as the features pile up.

Other seemingly unrelated changes:

- Compile against Rust 1.86.0 (Needed this cause unftp-sbe-iso uses the
  2024 edition.
- Removed unused dependency on the `futures` crate.
- Rearanged the features in groups
- let the `gnu` feature list its extentions explicityly

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ name: build
 # Update the RUST_VERSION here and in the Makefile when we upgrade
 env:
   CARGO_TERM_COLOR: always
-  RUST_VERSION: 1.83.0
+  RUST_VERSION: 1.86.0
 
 on:
   push:
@@ -78,6 +78,8 @@ jobs:
           override: true
           default: true
           components: clippy
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y libfuse-dev
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
@@ -97,7 +99,7 @@ jobs:
           default: true
           components: clippy
       - name: Install build dependencies
-        run: sudo apt-get update && sudo apt-get install -y libpam-dev
+        run: sudo apt-get update && sudo apt-get install -y libpam-dev libfuse-dev
       - name: Run tests
         run: cargo test --verbose  --workspace --all --all-features
       - name: Build Docs
