--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ base64 = "0.22.1"
 clap = { version = "3.2.25", features = ["derive", "env"] }
 console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.35"
-futures = "0.3.31"
 http = "0.2.12"
 hyper = { version = "0.14.31", features = ["server", "http1"] }
 hyper-rustls = "0.23.2"
@@ -57,6 +56,7 @@ tokio = { version = "1.42.0", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.2.6"
 unftp-sbe-gcs = { version = "0.2.7", optional = true }
 unftp-sbe-opendal = { version = "0.0.1", optional = true }
+unftp-sbe-iso = { version = "0.1.0", optional = true }
 unftp-auth-rest = { version = "0.2.7", optional = true }
 unftp-auth-jsonfile = { version = "0.3.5", optional = true }
 unftp-sbe-rooter = "0.2.1"
@@ -68,17 +68,23 @@ unftp-auth-pam = { version = "0.2.5", optional = true }
 
 [features]
 default = ["rest_auth", "cloud_storage", "jsonfile_auth", "opendal"]
-all_extentions = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage", "opendal"]
-cloud_storage = ["unftp-sbe-gcs"]
-jsonfile_auth = ["unftp-auth-jsonfile"]
-pam_auth = ["unftp-auth-pam"]
-rest_auth = ["unftp-auth-rest"]
-tokio_console = ["console-subscriber", "tokio/tracing"]
+tokio_console = ["dep:console-subscriber", "tokio/tracing"]
+
+## Storage back-end extentions
+cloud_storage = ["dep:unftp-sbe-gcs"]
 opendal = ["dep:unftp-sbe-opendal", "dep:opendal"]
 azblob = ["opendal/services-azblob"]
+sbe_iso = ["dep:unftp-sbe-iso"]
+
+## Auth back-end extentions
+pam_auth = ["dep:unftp-auth-pam"]
+rest_auth = ["dep:unftp-auth-rest"]
+jsonfile_auth = ["dep:unftp-auth-jsonfile"]
+
+all_extentions = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage", "opendal", "sbe_iso"]
 
 # With this we link dynamically to libc and pam
-gnu = ["all_extentions"]
+gnu = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage", "opendal"]
 
 # All features able to link statically
 musl = ["rest_auth", "cloud_storage", "jsonfile_auth", "azblob"]
