--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ readme = "README.md"
 keywords = ["ftp", "ftps", "server", "gcs"]
 categories = ["network-programming"]
 documentation = "https://github.com/bolcom/unFTP"
+resolver = "2"
 
 [workspace]
 
@@ -38,10 +39,10 @@ clap = { version = "3.2.25", features = ["derive", "env"] }
 console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.35"
 http = "0.2.12"
-hyper = { version = "0.14.31", features = ["server", "http1"] }
+hyper = { version = "1.6.0", features = ["server", "http1"] }
 hyper-rustls = "0.23.2"
 lazy_static = "1.5.0"
-libunftp = "0.20.3"
+libunftp = "0.21.0"
 opendal = { version = "0.47.3", optional = true }
 prometheus = { version = "0.13.4", features = ["process"] }
 serde = { version = "1.0.216", features = ["derive"] }
@@ -53,14 +54,15 @@ strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 thiserror = "1.0.69"
 tokio = { version = "1.42.0", features = ["signal", "rt-multi-thread"] }
-unftp-sbe-fs = "0.2.6"
-unftp-sbe-gcs = { version = "0.2.7", optional = true }
-unftp-sbe-opendal = { version = "0.0.1", optional = true }
-unftp-sbe-iso = { version = "0.1.0", optional = true }
-unftp-auth-rest = { version = "0.2.7", optional = true }
-unftp-auth-jsonfile = { version = "0.3.5", optional = true }
-unftp-sbe-rooter = "0.2.1"
-unftp-sbe-restrict = "0.1.2"
+unftp-sbe-fs = "0.3.0"
+unftp-sbe-rooter = "0.2.2"
+unftp-sbe-restrict = "0.1.3"
+unftp-sbe-gcs = { version = "0.2.8", optional = true }
+unftp-sbe-opendal = { version = "0.1.0", optional = true }
+unftp-sbe-iso = { version = "0.1.1", optional = true }
+unftp-auth-rest = { version = "0.2.8", optional = true }
+unftp-auth-jsonfile = { version = "0.3.6", optional = true }
+
 url = "2.5.4"
 
 [target.'cfg(unix)'.dependencies]
