--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,30 +32,30 @@ features = ["shipper"]
 version = "0.1.0"
 
 [dependencies]
-async-trait = "0.1.88"
+async-trait = "=0.1.88"
 base64 = "0.22.1"
 clap = { version = "3.2.25", features = ["derive", "env"] }
 console-subscriber = { version = "0.4.1", optional = true }
-flate2 = "1.1.1"
+flate2 = "1.1.5"
 
-http = "1.3.1"
-hyper = { version = "1.6.0", features = ["server", "http1"] }
+http = "1.4.0"
+hyper = { version = "1.8.1", features = ["server", "http1"] }
 http-body-util = "0.1.3"
-hyper-util = { version = "0.1.13", features = ["tokio"] }
-hyper-rustls = "0.27.6"
+hyper-util = { version = "0.1.19", features = ["tokio"] }
+hyper-rustls = "0.27.7"
 lazy_static = "1.5.0"
-libunftp = "0.21.0"
+libunftp = "0.21.1"
 opendal = { version = "0.53.3", optional = true }
 prometheus = { version = "0.14.0", features = ["process"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.146"
+slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.8.0"
-slog-term = "2.9.1"
+slog-term = "2.9.2"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
-thiserror = "1.0.69"
-tokio = { version = "1.45.1", features = ["signal", "rt-multi-thread"] }
+thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.3.0"
 unftp-sbe-rooter = "0.2.2"
 unftp-sbe-restrict = "0.1.3"
@@ -64,8 +64,8 @@ unftp-sbe-opendal = { version = "0.2.1", optional = true }
 unftp-sbe-iso = { version = "0.1.2", optional = true }
 unftp-auth-rest = { version = "0.2.8", optional = true }
 unftp-auth-jsonfile = { version = "0.3.6", optional = true }
-url = "2.5.4"
-rustls = "0.23.27"
+url = "2.5.7"
+rustls = "0.23.35"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.7", optional = true }
