--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,12 @@ version = "0.1.0"
 async-trait = "=0.1.88"
 base64 = "0.22.1"
 clap = { version = "3.2.25", features = ["derive", "env"] }
-console-subscriber = { version = "0.4.1", optional = true }
+console-subscriber = { version = "0.5.0", optional = true }
 flate2 = "1.1.5"
-
 http = "1.4.0"
 hyper = { version = "1.8.1", features = ["server", "http1"] }
 http-body-util = "0.1.3"
-hyper-util = { version = "0.1.19", features = ["tokio"] }
+hyper-util = { version = "0.1.19", features = ["tokio", "server-graceful"] }
 hyper-rustls = "0.27.7"
 lazy_static = "1.5.0"
 libunftp = "0.21.1"
@@ -55,8 +54,8 @@ slog = { version = "2.8.2", features = [
 ] }
 slog-async = "2.8.0"
 slog-term = "2.9.2"
-strum = { version = "0.26.3", features = ["derive"] }
-strum_macros = "0.26.4"
+strum = { version = "0.27.2", features = ["derive"] }
+strum_macros = "0.27.2"
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["signal", "rt-multi-thread"] }
 unftp-sbe-fs = "0.3.0"
@@ -125,6 +124,9 @@ built = { version = "0.7.7", features = [
 debug = false
 lto = "fat"
 codegen-units = 1
+
+[package.metadata.docs.rs]
+all-features = true
 
 [package.metadata.arch]
 arch = ["x86_64"]
