--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ flate2 = "1.1.5"
 http = "1.4.0"
 hyper = { version = "1.8.1", features = ["server", "http1"] }
 http-body-util = "0.1.3"
-hyper-util = { version = "0.1.19", features = ["tokio", "server-graceful"] }
+hyper-util = { version = "0.1.19", features = ["full"] }
 hyper-rustls = "0.27.7"
 lazy_static = "1.5.0"
 libunftp = "0.21.1"
@@ -54,10 +54,10 @@ slog = { version = "2.8.2", features = [
 ] }
 slog-async = "2.8.0"
 slog-term = "2.9.2"
-strum = { version = "0.27.2", features = ["derive"] }
-strum_macros = "0.27.2"
+strum = { version = "0.26.3", features = ["derive"] }
+strum_macros = "0.26.4"
 thiserror = "2.0.17"
-tokio = { version = "1.48.0", features = ["signal", "rt-multi-thread"] }
+tokio = { version = "1.48.0", features = ["full"] }
 unftp-sbe-fs = "0.3.0"
 unftp-sbe-rooter = "0.2.2"
 unftp-sbe-restrict = "0.1.3"
