Move tokio-console docs from README to site

--- a/doctave.yaml
+++ b/doctave.yaml
@@ -22,5 +22,6 @@ navigation:
       - path: docs/server/anti-brute.md
       - path: docs/server/proxy-protocol.md
       - path: docs/server/docker.md
+      - path: docs/server/tokio-console.md
   - path: docs/support.md
   - path: docs/licensing.md
